--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" context="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Game</title>
+    <title>Echoes of Eden</title>
+    <!-- TODO: maybe get some fonts -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script src="main.js"></script>
+    <canvas id="gameCanvas"></canvas>
+
+    <!-- TODO: write proper assets for textures-->
+    <!-- TODO: add CSS display:none -->
+    <img id="background" src="assets">
+    <img id="button" src="assets">    
+    <img id="connect_box" src="assets">    
+    <img id="background" src="assets">    
+
+    <!-- TODO: maybe add preload of scripts, so everything fethced alongside script.js-->
+    <script src="script.js"></script>
 </body>
 </html>
