--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,12 +13,12 @@
 
     <!-- TODO: write proper assets for textures-->
     <!-- TODO: add CSS display:none -->
-    <img id="background" src="assets">
-    <img id="button" src="assets">    
-    <img id="connect_box" src="assets">    
-    <img id="background" src="assets">    
+    <img id="background" src="assets/textures/background.png">
+    <!-- <img id="button" src="assets">     -->
+    <!-- <img id="connect_box" src="assets">     -->
+    <!-- <img id="background" src="assets">     -->
 
     <!-- TODO: maybe add preload of scripts, so everything fethced alongside script.js-->
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
