scrolling map with tiles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,8 @@
 
     <!-- TODO: write proper assets for textures-->
     <!-- TODO: add CSS display:none -->
-    <img id="background" src="assets/textures/background.png">
+    <img id="grass_tiles" src="assets/textures/grass_tileset.png">
+    <img id="stone_tiles" src="assets/textures/stone_tileset.png">
     <!-- <img id="button" src="assets">     -->
     <!-- <img id="connect_box" src="assets">     -->
     <!-- <img id="background" src="assets">     -->
