attack and move animation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,8 @@
     <!-- TODO: add CSS display:none -->
     <img id="grass_tiles" src="assets/textures/grass_tileset.png">
     <img id="stone_tiles" src="assets/textures/stone_tileset.png">
+    <img id="warrior_1" src="assets/textures/entities/warrior_1.png">
+    
     <!-- <img id="button" src="assets">     -->
     <!-- <img id="connect_box" src="assets">     -->
     <!-- <img id="background" src="assets">     -->
